--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "heroku_fst_test",
+  "name": "unifi-portal-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx ts-node index.ts",
+    "start": "./start.sh ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
